test/expected/perr_function_unterminated_params.out
shit: 2:6: error: Expected ')' in a function definition.
     2 |  foo( {
       |       ^~ here.
